# CircuitSimulator

./: CMakeLists.txt  Makefile  README.md  diode.circuit  main.cpp  nonlinear.circuit  test.circuit
src/: constants.cpp  constants.hpp  guess.cpp  guess.hpp  parse.cpp  parse.hpp  solve.cpp  solve.hpp  stamp.cpp  stamp.hpp
src/Elements/: Capacitor.hpp  CurrentSource.hpp  Diode.hpp  Element.cpp  Element.hpp  Inductor.hpp  NPNBJT.hpp  NchannelMOSFET.hpp  PChannelMOSFET.hpp  PNPBJT.hpp  Resistor.hpp  VoltageSource.hpp  main.cpp
